ui-component: Correcting `noWrap` class
Minor correction to apply correct styles when the noWrap prop is
enabled. Adding details to the Text story to demonstrate the usage.

--- a/packages/ui-components/src/Typography/Text.module.scss
+++ b/packages/ui-components/src/Typography/Text.module.scss
@@ -40,7 +40,9 @@
 }
 
 .no-wrap {
+  display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  width: 100%;
 }
